Update FeedView layout

--- a/BeRealAppClone/Base.lproj/Main.storyboard
+++ b/BeRealAppClone/Base.lproj/Main.storyboard
@@ -113,9 +113,9 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zjo-JN-wJw">
-                                <rect key="frame" x="26" y="440" width="340" height="34.333333333333314"/>
+                                <rect key="frame" x="26" y="440" width="340" height="35"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Log In"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Sign Up"/>
                                 <connections>
                                     <action selector="onSignUpTapped:" destination="4zE-Kg-FDS" eventType="touchUpInside" id="YeL-or-5cK"/>
                                 </connections>
@@ -205,21 +205,16 @@
                                                                     <rect key="frame" x="0.0" y="0.0" width="395" height="25"/>
                                                                     <subviews>
                                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pjU-9t-j27">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="150" height="25"/>
-                                                                            <constraints>
-                                                                                <constraint firstAttribute="width" constant="150" id="UJu-ad-Zfu"/>
-                                                                            </constraints>
-                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                            <nil key="textColor"/>
-                                                                            <nil key="highlightedColor"/>
-                                                                        </label>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f3c-Ra-JlG">
-                                                                            <rect key="frame" x="150" y="0.0" width="245" height="25"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="395" height="25"/>
                                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
                                                                     </subviews>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="trailing" secondItem="pjU-9t-j27" secondAttribute="trailing" id="JAT-L7-QEw"/>
+                                                                        <constraint firstItem="pjU-9t-j27" firstAttribute="leading" secondItem="E4B-Kw-S3D" secondAttribute="leading" id="sel-JJ-bhu"/>
+                                                                    </constraints>
                                                                 </stackView>
                                                             </subviews>
                                                             <constraints>
@@ -227,24 +222,45 @@
                                                             </constraints>
                                                         </stackView>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xpy-SU-3y4">
-                                                            <rect key="frame" x="0.0" y="25" width="395" height="418"/>
+                                                            <rect key="frame" x="0.0" y="25" width="395" height="348"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="300" id="Xxz-TD-Pvn"/>
                                                                 <constraint firstAttribute="width" constant="395" id="aKX-6f-e09"/>
                                                             </constraints>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="60g-pz-3LR">
-                                                            <rect key="frame" x="0.0" y="443" width="395" height="25"/>
+                                                            <rect key="frame" x="0.0" y="373" width="395" height="95"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jvk-ad-MGu">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="395" height="25"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="395" height="50"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="50" id="pii-3u-dES"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f4U-pD-K9a">
+                                                                    <rect key="frame" x="0.0" y="50" width="395" height="25"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="25" id="Koq-rO-7nu"/>
+                                                                    </constraints>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sCQ-Jt-Y6z">
+                                                                    <rect key="frame" x="0.0" y="75" width="395" height="20"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="height" constant="20" id="Qww-Bd-3nh"/>
+                                                                    </constraints>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                             </subviews>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="25" id="Poo-mB-8Ha"/>
+                                                                <constraint firstAttribute="height" constant="95" id="ay0-fw-fiv"/>
                                                             </constraints>
                                                         </stackView>
                                                     </subviews>
@@ -261,7 +277,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="captionLabel" destination="jvk-ad-MGu" id="c6l-Dp-uwn"/>
-                                            <outlet property="dateLabel" destination="f3c-Ra-JlG" id="Ypb-VF-39h"/>
+                                            <outlet property="dateLabel" destination="f4U-pD-K9a" id="dId-Hf-6Kt"/>
                                             <outlet property="postImageView" destination="Xpy-SU-3y4" id="Hli-Kw-sfY"/>
                                             <outlet property="usernameLabel" destination="pjU-9t-j27" id="7K3-8d-X9J"/>
                                         </connections>
@@ -396,7 +412,7 @@
     </scenes>
     <resources>
         <systemColor name="quaternarySystemFillColor">
-            <color red="0.45490196078431372" green="0.45490196078431372" blue="0.50196078431372548" alpha="0.080000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.4549019608" green="0.4549019608" blue="0.50196078430000002" alpha="0.080000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
