--- a/BeRealAppClone/Base.lproj/Main.storyboard
+++ b/BeRealAppClone/Base.lproj/Main.storyboard
@@ -240,15 +240,31 @@
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f4U-pD-K9a">
+                                                                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vjH-cT-aF9">
                                                                     <rect key="frame" x="0.0" y="50" width="395" height="25"/>
+                                                                    <subviews>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f4U-pD-K9a">
+                                                                            <rect key="frame" x="0.0" y="0.0" width="200" height="25"/>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="height" constant="25" id="Koq-rO-7nu"/>
+                                                                                <constraint firstAttribute="width" constant="200" id="Mp9-AQ-9uq"/>
+                                                                            </constraints>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <nil key="textColor"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S0O-oi-OaG">
+                                                                            <rect key="frame" x="200" y="0.0" width="195" height="25"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <nil key="textColor"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                    </subviews>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="height" constant="25" id="Koq-rO-7nu"/>
+                                                                        <constraint firstAttribute="trailing" secondItem="S0O-oi-OaG" secondAttribute="trailing" constant="2" id="Bm4-YD-D5g"/>
+                                                                        <constraint firstItem="f4U-pD-K9a" firstAttribute="leading" secondItem="vjH-cT-aF9" secondAttribute="leading" id="SvG-c7-ExU"/>
                                                                     </constraints>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
+                                                                </stackView>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sCQ-Jt-Y6z">
                                                                     <rect key="frame" x="0.0" y="75" width="395" height="20"/>
                                                                     <constraints>
@@ -278,8 +294,10 @@
                                         <connections>
                                             <outlet property="captionLabel" destination="jvk-ad-MGu" id="c6l-Dp-uwn"/>
                                             <outlet property="dateLabel" destination="f4U-pD-K9a" id="dId-Hf-6Kt"/>
+                                            <outlet property="locationLabel" destination="S0O-oi-OaG" id="TBM-Od-L9k"/>
                                             <outlet property="postImageView" destination="Xpy-SU-3y4" id="Hli-Kw-sfY"/>
                                             <outlet property="usernameLabel" destination="pjU-9t-j27" id="7K3-8d-X9J"/>
+                                            <segue destination="hAd-4l-BQy" kind="show" identifier="DetailPostSegue" id="OvJ-uZ-lbQ"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -311,6 +329,69 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bVQ-ad-4In" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="930.53435114503816" y="818.30985915492965"/>
+        </scene>
+        <!--Detail Post View Controller-->
+        <scene sceneID="kiS-Vp-JNi">
+            <objects>
+                <viewController id="hAd-4l-BQy" customClass="DetailPostViewController" customModule="BeRealAppClone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hUp-Wd-yLF">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="24N-4C-UlU">
+                                <rect key="frame" x="0.0" y="172" width="393" height="209.33333333333337"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AOk-tR-VWq">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Id-5y-dt6">
+                                        <rect key="frame" x="0.0" y="20.333333333333343" width="393" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CvJ-Lp-lgx">
+                                        <rect key="frame" x="0.0" y="40.666666666666657" width="393" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UY8-aX-MxV">
+                                        <rect key="frame" x="0.0" y="61.000000000000007" width="393" height="20.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6e9-Oe-79o">
+                                        <rect key="frame" x="0.0" y="81.333333333333343" width="393" height="128"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="eSW-Sh-ek5"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="eSW-Sh-ek5" firstAttribute="bottom" secondItem="24N-4C-UlU" secondAttribute="bottom" constant="402.67000000000002" id="G6H-zc-wTV"/>
+                            <constraint firstItem="eSW-Sh-ek5" firstAttribute="trailing" secondItem="24N-4C-UlU" secondAttribute="trailing" id="Ixy-rv-qKG"/>
+                            <constraint firstItem="24N-4C-UlU" firstAttribute="leading" secondItem="eSW-Sh-ek5" secondAttribute="leading" id="JlB-ec-WbY"/>
+                            <constraint firstItem="24N-4C-UlU" firstAttribute="top" secondItem="eSW-Sh-ek5" secondAttribute="top" id="c6b-Qa-QGf"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="qYi-eV-c9d"/>
+                    <connections>
+                        <outlet property="captionLabel" destination="CvJ-Lp-lgx" id="XLl-s5-LpH"/>
+                        <outlet property="dateLabel" destination="1Id-5y-dt6" id="ZLG-wx-Bot"/>
+                        <outlet property="locationLabel" destination="UY8-aX-MxV" id="aVV-pV-wbX"/>
+                        <outlet property="postImageView" destination="6e9-Oe-79o" id="0dG-GY-LBT"/>
+                        <outlet property="usernameLabel" destination="AOk-tR-VWq" id="4Gv-C7-FZL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gZn-md-CRp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="930.53435114503816" y="1609.8591549295775"/>
         </scene>
         <!--Post View Controller-->
         <scene sceneID="7XP-7Z-k4e">
